# slaides

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.local-supabase.yml  docker-compose.prod.yml  docker-compose.yml  slaides.html  visual-directions.html
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_m0_m1_schema.py  0002_widgets.py  0003_sessions.py  0004_session_fixes.py  0005_llm_calls.py  0006_interaction_log_session_slide.py  0007_session_slide_theme_default.py  0008_supabase_auth_approval.py  0009_drop_app_user_password_hash.py  0010_split_workspace_llm_caps.py  0011_widget_deck_local.py  0012_placement_state.py  0013_session_is_preview.py  0014_tutorial_v2_reseed.py  0015_widget_revisions_ai_threads.py  0016_session_events.py  0017_ai_message_revision_cascade.py  0018_interpret_quick_options.py  0019_llm_interpret_cache.py  0020_slide_presenter_notes.py  0021_mirror_screen_access.py  0022_widget_cdn_allowlist.py
apps/api/scripts/: approve_user.py  delete_user.py  load_rehearsal.py  seed.py
apps/api/src/slaides/: main.py  redis_client.py  settings.py
apps/api/src/slaides/analytics/: __init__.py  crypto.py  events.py  export.py  router.py  service.py
apps/api/tests/: conftest.py  test_aggregators.py  test_analytics.py  test_auth.py  test_decks.py  test_llm.py  test_load_rehearsal.py  test_onboarding.py  test_placement_state.py  test_props_validator.py  test_readiness.py  test_sessions.py  test_settings.py  test_widgets.py  test_ws.py
(+240 files in other folders)
