[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slaides-api"
version = "0.1.0"
description = "SLAIDES backend — FastAPI v0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.4",
  "argon2-cffi>=23.1",
  "pyjwt>=2.9",
  "python-multipart>=0.0.9",
  "redis[asyncio]>=5",
  "httpx>=0.27",
  "cryptography>=43",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "fakeredis>=2.23",
  "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
